# mip-splatting

./: .gitignore  README.md  convert_blender_data.py  create_fused_ply.py  metrics.py  render.py  requirements.txt  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: fused_ply.py  run_mipnerf360.py  run_mipnerf360_stmt.py  run_nerf_synthetic_mtmt.py  run_nerf_synthetic_stmt.py
submodules/diff-gaussian-rasterization/: rasterize_points.cu  rasterize_points.h
submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
submodules/sibr_core/src/projects/: trackChanges.sh
submodules/sibr_core/src/projects/basic/: CMakeLists.txt
submodules/sibr_core/src/projects/basic/apps/: CMakeLists.txt
submodules/sibr_core/src/projects/basic/renderer/: CMakeLists.txt  PointBasedView.cpp  PointBasedView.hpp  TexturedMeshView.cpp  TexturedMeshView.hpp
submodules/sibr_core/src/projects/gaussianviewer/: CMakeLists.txt
submodules/sibr_core/src/projects/remote/: CMakeLists.txt
submodules/sibr_core/src/projects/remote/apps/: CMakeLists.txt
submodules/sibr_core/src/projects/remote/apps/remoteGaussianUI/: CMakeLists.txt  main.cpp
submodules/simple-knn/: .gitignore
utils/: camera_utils.py
(+36 files in other folders)
